--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,14 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        default_schema: jwt
+        show_sql: true
+        ddl-auto: create
+        default_schema: tempdb
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
+    hibernate:
+      ddl-auto: create
+
 logging:
   level:
     org:
